syntax = 'proto3';

package auth;

//import "google/api/annotations.proto";

option go_package = "kalyuzhin.sso.v1;ssov1";

service Auth{
  rpc Register (RegisterRequest) returns(RegisterResponse){
    //    option (google.api.http) = {
    //      post: "/api/v1/user"
    //      body: "*"
    //    };
  };

  rpc Login(LoginRequest) returns(LoginResponse){
    //    option (google.api.http) = {
    //      get: "/api/v1/user/{id}"
    //      body: "*"
    //    };
  }

  rpc CreateApp(CreateAppRequest) returns(CreateAppResponse){};

  rpc GetPublicKeys(GetPublicKeyRequest) returns (GetPublicKeyResponse){};
}

message RegisterRequest{
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  int32 add_id = 3;
}

message LoginResponse {
  string token = 1;
}

message CreateAppRequest {
  string name = 1;
  string secret = 2;
}

message CreateAppResponse {
  int64 id = 1;
}

message GetPublicKeyRequest{

}

message GetPublicKeyResponse{
  repeated Jwk keys = 1;
}

message Jwk {
  string kty = 1;
  string kid = 2;
  string use = 3;
  string alg = 4;
  string n = 5;
  string e = 6;
}